Setting only send scope